# Atari drivers - self-describing driver group fragment.
# Sets group_desc/group_use/group_drivers/group_srcs (data only, no targets).
# Add a driver: drop d_<name>.cpp here and add one line to group_drivers.

group_desc    = 'Atari drivers'
group_use     = [
    'adsp2100',
    'm6502',
    'm68000',
    'm6809',
    'tms34010',
    'atariic',
    'atarijsa',
    'atarimo',
    'atarirle',
    'atarivad',
    'avgdvg',
    'dtimer',
    'earom',
    'eeprom',
    'slapstic',
    'tms34061',
    'watchdog',
    'asteroids',
    'ay8910',
    'bzone',
    'dac',
    'llander',
    'msm6295',
    'pokey',
    'redbaron',
    'samples',
    'tms5220',
    'ym2151',
    'ym2413',
]
group_drivers = [
    'd_akkaarrh.cpp',
    'd_arcadecl.cpp',
    'd_atarig1.cpp',
    'd_atarisy1.cpp',
    'd_badlands.cpp',
    'd_batman.cpp',
    'd_blstroid.cpp',
    'd_eprom.cpp',
    'd_gauntlet.cpp',
    'd_klax.cpp',
    'd_marblmd2.cpp',
    'd_missile.cpp',
    'd_offtwall.cpp',
    'd_rampart.cpp',
    'd_relief.cpp',
    'd_shuuz.cpp',
    'd_skullxbo.cpp',
    'd_thunderj.cpp',
    'd_toobin.cpp',
    'd_vindictr.cpp',
    'd_xybots.cpp',
]
group_srcs    = []
