# Atari drivers - self-describing driver group fragment.
# group_srcs: shared support compiled whenever any driver here is selected.
# drivers: per-driver component lists (seeded from the old group set;
#          refine individually, then verify with test_per_driver.py).
# Add a driver: drop d_<name>.cpp here and add a 'd_<name>.cpp': [...] entry.

group_desc = 'Atari drivers'
group_srcs = []
drivers = {
    'd_akkaarrh.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_arcadecl.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_atarig1.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_atarisy1.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_badlands.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_batman.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_blstroid.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_eprom.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_gauntlet.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_klax.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_marblmd2.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_missile.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_offtwall.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_rampart.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_relief.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_shuuz.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_skullxbo.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_thunderj.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_toobin.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_vindictr.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
    'd_xybots.cpp': [
        'adsp2100',
        'm6502',
        'm68000',
        'm6809',
        'tms34010',
        'atariic',
        'atarijsa',
        'atarimo',
        'atarirle',
        'atarivad',
        'avgdvg',
        'dtimer',
        'earom',
        'eeprom',
        'slapstic',
        'tms34061',
        'watchdog',
        'asteroids',
        'ay8910',
        'bzone',
        'dac',
        'llander',
        'msm6295',
        'pokey',
        'redbaron',
        'samples',
        'tms5220',
        'ym2151',
        'ym2413',
    ],
}
