# Atari drivers - self-describing driver group fragment.
# group_srcs: shared support compiled whenever any driver here is selected.
# drivers: per-driver component lists (seeded from the old group set;
#          refine individually, then verify with test_per_driver.py).
# Add a driver: drop d_<name>.cpp here and add a 'd_<name>.cpp': [...] entry.

group_desc = 'Atari drivers'
group_srcs = []
drivers = {
    'd_akkaarrh.cpp': ['earom', 'm6502', 'pokey', 'watchdog'],
    'd_arcadecl.cpp': ['atariic', 'atarimo', 'm68000', 'msm6295', 'slapstic', 'watchdog'],
    'd_atarig1.cpp': ['atariic', 'atarijsa', 'atarirle', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
    'd_atarisy1.cpp': ['atariic', 'atarijsa', 'atarimo', 'dtimer', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
    'd_badlands.cpp': ['atariic', 'atarijsa', 'atarimo', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
    'd_batman.cpp': ['atariic', 'atarijsa', 'atarimo', 'atarivad', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
    'd_blstroid.cpp': ['atariic', 'atarijsa', 'atarimo', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
    'd_eprom.cpp': ['atariic', 'atarijsa', 'atarimo', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
    'd_gauntlet.cpp': ['atariic', 'atarimo', 'm6502', 'm68000', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
    'd_klax.cpp': ['atariic', 'atarimo', 'm68000', 'msm6295', 'slapstic', 'watchdog'],
    'd_marblmd2.cpp': ['atariic', 'atarijsa', 'atarimo', 'atarivad', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'ym2151'],
    'd_missile.cpp': ['m6502', 'pokey', 'watchdog'],
    'd_offtwall.cpp': ['atariic', 'atarijsa', 'atarimo', 'atarivad', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
    'd_rampart.cpp': ['atariic', 'atarimo', 'm68000', 'msm6295', 'slapstic', 'watchdog', 'ym2413'],
    'd_relief.cpp': ['atariic', 'atarimo', 'atarivad', 'm68000', 'msm6295', 'slapstic', 'watchdog', 'ym2413'],
    'd_shuuz.cpp': ['atariic', 'atarimo', 'atarivad', 'm68000', 'msm6295', 'slapstic', 'watchdog'],
    'd_skullxbo.cpp': ['atariic', 'atarijsa', 'atarimo', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
    'd_thunderj.cpp': ['atariic', 'atarijsa', 'atarimo', 'atarivad', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
    'd_toobin.cpp': ['atariic', 'atarijsa', 'atarimo', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
    'd_vindictr.cpp': ['atariic', 'atarijsa', 'atarimo', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
    'd_xybots.cpp': ['atariic', 'atarijsa', 'atarimo', 'm6502', 'm68000', 'msm6295', 'pokey', 'slapstic', 'tms5220', 'watchdog', 'ym2151'],
}
